--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>XyloLibrary</h1>
-    <p>Discover and download free ebooks right from your browser for free !</p>
+    <p>Discover, read and download ebooks for free !</p>
     <input type="text" id="search" placeholder="🔍 Search by title or author...">
   </header>
 
