Add note about Project Gutenberg in footer

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <footer>
     <p>Made by Hillol Dutta Chaudhury (Xylo) using GitHub Pages</p>
+    <p>Note: Most of our books are from Project Gutenberg</p>
   </footer>
 
   <script src="script.js"></script>
